// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute aptos endpoint should return success 1`] = `
{
  "data": {
    "result": 1,
  },
  "result": 1,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute aptos-df-reader endpoint should return success 1`] = `
{
  "data": {
    "result": "10568348893862534",
  },
  "result": "10568348893862534",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute calculated-multi-function endpoint should fail additional data requests in case of missing signature 1`] = `
{
  "errorMessage": "Function call "decimals" failed: TypeError: no matching function (argument="key", value="", code=INVALID_ARGUMENT, version=6.15.0)",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute calculated-multi-function endpoint should return error for missing RPC url env var 1`] = `
{
  "error": {
    "message": "Missing 'ARBITRUM_MAINNET_RPC_URL' or 'ARBITRUM_MAINNET_CHAIN_ID' environment variables.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute calculated-multi-function endpoint should return error for missing chain id env var 1`] = `
{
  "error": {
    "message": "Missing 'ARBITRUM_MAINNET_RPC_URL' or 'ARBITRUM_MAINNET_CHAIN_ID' environment variables.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute calculated-multi-function endpoint should return success 1`] = `
{
  "data": {
    "result": "0x000000000000000000000000000000000000000000000000000000005ad789f8",
  },
  "result": "0x000000000000000000000000000000000000000000000000000000005ad789f8",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute calculated-multi-function endpoint should return success for different network 1`] = `
{
  "data": {
    "result": "0x000000000000000000000000000000000000000000000000eead809f678d30f0",
  },
  "result": "0x000000000000000000000000000000000000000000000000eead809f678d30f0",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute calculated-multi-function endpoint should return success with constants 1`] = `
{
  "data": {
    "decimals": "18",
    "result": "0x000000000000000000000000000000000000000000000000000000005cf7ff3b",
  },
  "result": "0x000000000000000000000000000000000000000000000000000000005cf7ff3b",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute calculated-multi-function endpoint should return success with multiple data requests  1`] = `
{
  "data": {
    "decimals": "0x0000000000000000000000000000000000000000000000000000000000000008",
    "result": "0x000000000000000000000000000000000000000000000000000000005ad789f8",
  },
  "result": "0x000000000000000000000000000000000000000000000000000000005ad789f8",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute calculated-multi-function endpoint should return success with only constants 1`] = `
{
  "data": {
    "result": "18",
  },
  "result": "18",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute calculated-multi-function endpoint should return success with operations 1`] = `
{
  "data": {
    "a": "3",
    "b": "5",
    "result": "15",
  },
  "result": "15",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute calculated-multi-function endpoint should return success with parameters 1`] = `
{
  "data": {
    "result": "0x000000000000000000000000000000000000000000000000000000005cf7ff3b",
  },
  "result": "0x000000000000000000000000000000000000000000000000000000005cf7ff3b",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute function endpoint should return success 1`] = `
{
  "data": {
    "result": "0x000000000000000000000000000000000000000000000000000000005ad789f8",
  },
  "result": "0x000000000000000000000000000000000000000000000000000000005ad789f8",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute function endpoint should return success for different network 1`] = `
{
  "data": {
    "result": "0x000000000000000000000000000000000000000000000000eead809f678d30f0",
  },
  "result": "0x000000000000000000000000000000000000000000000000eead809f678d30f0",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute function endpoint should return success with parameters 1`] = `
{
  "data": {
    "result": "0x000000000000000000000000000000000000000000000000000000005cf7ff3b",
  },
  "result": "0x000000000000000000000000000000000000000000000000000000005cf7ff3b",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute function-response-selector endpoint should fail with non-existant resultField 1`] = `
{
  "errorMessage": "Invalid resultField not found in response",
  "statusCode": 400,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute function-response-selector endpoint should return success with resultField 1`] = `
{
  "data": {
    "result": "123456789",
  },
  "result": "123456789",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
